# PongCpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.bat  build_log.txt
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
docs/: README.md  vulkan_migration.md
docs/developer/: api-reference.md  architecture.md  settings.md
docs/user/: user-guide.md
src/: game.cpp  game.h  main.cpp  platform.h  platform_posix.cpp  platform_win.cpp
src/console/: game.cpp  game.h  main.cpp
src/core/: black_hole.cpp  black_hole.h  game_core.cpp  game_core.h
src/platform/: platform.h  platform_posix.cpp  platform_win.cpp
src/vulkan/: game_vulkan.cpp  game_vulkan.h  game_vulkan_linux.cpp  game_vulkan_linux.h  main_vulkan.cpp  main_vulkan_linux.cpp  slang_compiler.cpp  slang_compiler.h  vulkan_context.cpp  vulkan_context.h  vulkan_debug.h  vulkan_math.h  vulkan_memory.cpp  vulkan_memory.h  vulkan_renderer.cpp  vulkan_renderer.h
src/vulkan/shaders/: build_shaders.bat  primitives.slang  test_minimal.slang  uniforms.slang  vertex_types.slang
src/win/: d3d12_renderer.cpp  d3d12_renderer.h  game_mode_config.cpp  game_mode_config.h  game_vulkan.cpp  game_vulkan.h  game_win.cpp  game_win.h  highscores.cpp  highscores.h  main_vulkan.cpp  main_win.cpp  pong.rc  settings.cpp  settings.h  soft_renderer.cpp  soft_renderer.h
src/win/app/: app_controller.cpp  app_controller.h  frame_timer.cpp  frame_timer.h  game_session.cpp  game_session.h
src/win/events/: events.h
src/win/input/: input_router.cpp  input_router.h  input_state.h
src/win/integration/: message_loop.cpp  message_loop.h  window_proc_thunk.cpp  window_proc_thunk.h
src/win/persistence/: highscores_store.cpp  highscores_store.h  settings_store.cpp  settings_store.h
src/win/platform/: backbuffer.cpp  backbuffer.h  win_window.cpp  win_window.h
src/win/rendering/: classic_renderer.cpp  classic_renderer.h  hud_overlay.cpp  hud_overlay.h  pt_renderer_adapter.cpp  pt_renderer_adapter.h
src/win/shaders/: PathTrace.hlsl
src/win/ui/: game_mode_settings_view.cpp  game_mode_settings_view.h  high_scores_view.cpp  high_scores_view.h  main_menu_view.cpp  main_menu_view.h  name_entry_modal.cpp  name_entry_modal.h  settings_panel.cpp  settings_panel.h  ui_state.h
src/win/ui/widgets/: widgets.cpp  widgets.h
